k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-api
  namespace: postech
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: workshop-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
