k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workshop-api
spec:
  podSelector:
    matchLabels:
      app: workshop-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - ports:
        - port: 8080
          protocol: TCP
